--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ googlescholar_username:
 
 # Additional icon links
 additional_links:
-- title: 
-  icon:
-  url:
+- title: Home page
+  icon: fab fa-globe
+  url: https://henrikkilahtinen.fi
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
