--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,9 @@ about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
   Hi! I'm Henrikki Lahtinen, IT professional and AI enthusiast from Helsinki, Finland.
 
-  Currently I work as an Sr. System Specialist for <a href="https://www.avaus.com/" target="_blank">Avaus</a>.
+
+  Currently I work as a Sr. System Specialist for <a href="https://www.avaus.com/" target="_blank">Avaus</a>.
+  
 
   I have a passion for generative AI technologies from chatGPT to local LLMs.
 
@@ -95,13 +97,13 @@ content:
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
+        title: Haaga-Helia University of Applied Sciences
+        sub_title: Bachelor of Business Administration (Information Technology)
+        caption: 2007-2010
         quote: >
-          Short institution or course description (optional)
+          
         description: | # this will include new lines to allow paragraphs
-          Description of qualification
+          Major in Software Development
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
@@ -110,7 +112,7 @@ content:
       Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 # references_title: References on request (Override references text)
 
 # Build settings
