--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,8 @@ content:
         quote: >
         
         description: | # this will include new lines to allow paragraphs
-        I have worked in client teams as a Marketing Automation Specialist, mainly with Adobe Campaign. My role includes technological duties associated with implementing and operating a Marketing Automation System such as design, planning, management, maintenance as well as supporting the client 
+        I work in client teams as a Marketing Automation Specialist, mainly with Adobe Campaign. 
+        My role includes technological duties associated with implementing and operating a Marketing Automation System such as design, planning, development, management, maintenance as well as supporting the client. 
     content:
       - layout: right
         title: Menestystarinat Oy
