--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Henrikki Lahtinen
-title: System Specialist/AI enthusiast
+title: IT professional/AI enthusiast
 email: henrikki@henrikkilahtinen.fi
 # email_title: Email (Email title override)
 phone:
