--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   I have almost ten years of experience as a Adobe Campaign expert, and even more with web technologies such as HTML/CSS/JavaScript/SQL. Latelty I have taken on Python.
   
-  I would like to learn more about Data Engineering/Cloud Engineering. I have a passion for generative AI technologies from chatGPT to local LLMs.
+  I would like to learn more about Data Engineering/Cloud Engineering. I have a passion for generative AI technologies like chatGPT and local LLMs.
 
 content:
   - title: Projects # Title for the section
