--- a/_config.yml
+++ b/_config.yml
@@ -118,10 +118,7 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
-
+      I'am an avid Arsenal FC supported. I play Fantasy Premier League (poorly). Sometimes I game. 
 # Footer
 footer_show_references: false
 # references_title: References on request (Override references text)
