--- a/_config.yml
+++ b/_config.yml
@@ -92,8 +92,11 @@ content:
         quote: >
         
         description: | # this will include new lines to allow paragraphs
-         I work in client teams as a Marketing Automation Specialist, mainly with Adobe Campaign. My role includes technological duties associated with implementing and operating a Marketing Automation System such as design, planning, development, management, maintenance as well as supporting the client. 
-         
+         I work in client teams as a Marketing Automation Specialist, mainly with Adobe Campaign. My role includes technological duties associated with implementing and operating a Marketing Automation System such as design, planning, development, management, maintenance as well as supporting the client.
+  - title: work history
+    layout: list
+    content:
+      - layout: right
         title: Menestystarinat Oy
         sub_title: Web Developer
         caption: 1/2012 - 12/2013
@@ -101,7 +104,7 @@ content:
         quote: >
         
         description: | # this will include new lines to allow paragraphs
-         I created websites for businesses with Joomla! and WordPress. I learned a lot about web technologies such as HTML/CSS/PHP and some SQL. I also did SEO. 
+         I created websites for businesses with Joomla! and WordPress. I learned alot about web technologies such as HTML/CSS/PHP and some SQL. I also did SEO.
   - title: Education
     layout: list
     content:
