--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ content:
           Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
           Description about the work on/with the project
-  - title: Experience
+  - title: Current job
     layout: list
     content:
       - layout: right
@@ -93,7 +93,7 @@ content:
         
         description: | # this will include new lines to allow paragraphs
          I work in client teams as a Marketing Automation Specialist, mainly with Adobe Campaign. My role includes technological duties associated with implementing and operating a Marketing Automation System such as design, planning, development, management, maintenance as well as supporting the client.
-  - title: work history
+  - title: Work History
     layout: list
     content:
       - layout: right
