--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ content:
     layout: list
     content:
       - layout: left
-        title: Avaus Oy
+        title: Avaus Marketing Innovations Oy
         sub_title: System Specialist/Sr. System Specialist
         caption: 6/2014 - present
         link: https://avaus.com
@@ -93,6 +93,15 @@ content:
         
         description: | # this will include new lines to allow paragraphs
          I work in client teams as a Marketing Automation Specialist, mainly with Adobe Campaign. My role includes technological duties associated with implementing and operating a Marketing Automation System such as design, planning, development, management, maintenance as well as supporting the client.
+    - content:
+     - layout: left
+       title: TEST
+       sub_title:
+       caption:
+       link:
+       quote:
+       description:
+      
   - title: Work History
     layout: list
     content:
