--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ content:
         quote: >
           
         description: | # this will include new lines to allow paragraphs
-          Major in Software Development
+          Majored in Software Development
           
   - title: A Little More About Me
     layout: text
