--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: images/cartoon_face.png
+about_profile_image: images/cartoon_henrikki.png
 about_content: | # this will include new lines to allow paragraphs
   Hi! I'm Henrikki Lahtinen, IT professional and AI enthusiast from Helsinki, Finland.
 
