--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ content:
         quote: >
         
         description: | # this will include new lines to allow paragraphs 
-         I did my Apprenticeship for my studies at Connexor. Connexor is a software company with expertise on natural language text analysis.  I created a web portal with Joomla! CMS.
+         I did my apprenticeship for my studies at Connexor. Connexor is a software company with expertise on natural language text analysis.  I created a web portal with Joomla! CMS.
 
          I also did my thesis as a comission for Connexor. The subject of my thesis was data scraping from Social Media (Twitter and Facebook) for brand analysis. Technologies I used include PHP/MySQL (scraping and storing) and HTML/CSS (UI).
                   
