--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ content:
         quote: >
         
         description: | # this will include new lines to allow paragraphs
-         I created websites for businesses with Joomla! and WordPress. I was able to hone my skills on many web technologies such as HTML/CSS/PHP and some SQL. I also did SEO.
+         I created websites for businesses with Joomla! and WordPress. I was able to hone my skills on many web technologies such as HTML/CSS/PHP and SQL. I also did SEO.
       
       - layout: left
         title: Connexor Oy
